--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,11 @@
-.cell { border: 1px #000 solid; padding: 5px 10px; }
+.cell {
+    border: 1px #000 solid;
+    padding: 5px 10px;
+    max-width: 200px;
+    min-width: 100px;
+}
+
+.different {
+    color: red;
+    font-weight: bold;
+}
